feat: rename menu type from FOLDER to CATALOG for consistency

--- a/frontend/apps/admin/src/locales/langs/en-US/enum.json
+++ b/frontend/apps/admin/src/locales/langs/en-US/enum.json
@@ -14,7 +14,7 @@
     "SYS_ADMIN": "Admin"
   },
   "menuType": {
-    "FOLDER": "Folder",
+    "CATALOG": "Catalog",
     "MENU": "Menu",
     "BUTTON": "Button",
     "EMBEDDED": "Embedded",
