--- a/frontend/apps/admin/src/locales/langs/zh-CN/enum.json
+++ b/frontend/apps/admin/src/locales/langs/zh-CN/enum.json
@@ -8,7 +8,7 @@
     "false": "禁用"
   },
   "menuType": {
-    "FOLDER": "目录",
+    "CATALOG": "目录",
     "MENU": "菜单",
     "BUTTON": "按钮",
     "EMBEDDED": "内嵌",
