feat: update user and organization management components, refactor state management, and enhance API integration

--- a/frontend/apps/admin/src/locales/langs/zh-CN/page.json
+++ b/frontend/apps/admin/src/locales/langs/zh-CN/page.json
@@ -160,7 +160,7 @@
     }
   },
   "orgUnit": {
-    "moduleName": "组织",
+    "moduleName": "组织列表",
     "name": "组织名称",
     "code": "唯一编码",
     "parentId": "上级组织",
